# Nebula-De-Esser

./: Cargo.toml  LICENSE  README.md  README_COMPLETE.md  README_OLD.md  build_linux.sh  build_mac.sh  build_windows.bat  build_windows.ps1  bundler.toml  verify_build.sh
.cargo/: config.toml
.github/scripts/: add_vst3.py  make_universal.sh  patch_cargo_toml.py  patch_vst3.py
.github/workflows/: build.yml  main.yml  new_build.yml
src/: analyzer.rs  dsp.rs  gui.rs  lib.rs  macos_metal_editor.rs  metrics.rs  stable_adapter.rs  storage.rs  windows_editor.rs
tests/: audio_eval.py  audio_tests.rs  benchmark_comparison.rs  dsp_validation.rs  nebula_test_suite.py  objective_metrics.rs  test_report.json
xtask/: Cargo.toml
xtask/src/: main.rs
