[package]
name = "nebula_desser"
version = "2.9.0"
edition = "2026"
authors = ["Nebula Audio"]
description = "Nebula DeEsser - Rust de-esser plugin for CLAP, VST3, and AUv2"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["xtask"]
resolver = "2"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["vst3"] }
parking_lot = "0.12"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[target.'cfg(target_os = "windows")'.dependencies]
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[target.'cfg(target_os = "macos")'.dependencies]
clap-wrapper = { version = "0.3", default-features = false, features = ["auv2", "parallel"] }

[dev-dependencies]
rand = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
overflow-checks = false
debug-assertions = false
panic = "abort"

[profile.release.build-override]
opt-level = 3
codegen-units = 1
