[package]
name = "nebula_desser"
version = "3.3.0"
edition = "2021"
authors = ["Nebula Audio"]
description = "Nebula De-Esser - Rust de-esser plugin for CLAP and VST3"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["xtask"]
resolver = "2"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["vst3"] }
parking_lot = "0.12"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
windows-numerics = "0.3.1"

[dev-dependencies]
rand = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
overflow-checks = false
debug-assertions = false
panic = "abort"

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[patch."https://github.com/RustAudio/baseview.git"]
baseview = { path = "vendor/baseview" }

[patch."https://github.com/BillyDM/egui-baseview.git"]
egui-baseview = { path = "vendor/egui-baseview" }
